--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My first pull</title>
+    <title>Tetris</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>did it work?</p>
